# chat_app

./: Cargo.toml  LICENSE  README.md  TODO.md
migrations/2023-03-04-202100_initial/: down.sql  up.sql
src/: auth.rs  lib.rs  models.rs  schema.rs
