[package]
name = "chat_app"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.26"
diesel = { version = "2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
eyre = "0.6"
rand = "0.8"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
tui = "0.19"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
reqwest-eventsource = "0.4"
tokio = "1.27"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
tokio-util = "0.7.7"
